--- a/scss/pages/_miembos.scss
+++ b/scss/pages/_miembos.scss
@@ -11,6 +11,11 @@
     width: 70%;
     padding: 20px;
 }
+.subtitMiem{
+    padding: 10px;
+    font-size: 1.5rem;
+    color: white;
+}
 .miembrosConteiner{
     article{
         div{
