--- a/css/style.css
+++ b/css/style.css
@@ -252,7 +252,7 @@ footer {
   display: flex;
   justify-content: center;
   align-items: end;
-  transition-duration: 2s;
+  transition-duration: 3s;
   transition-property: 1s;
   transition-delay: 0s;
 }
@@ -265,7 +265,7 @@ footer {
 .conteinerActv article img:hover {
   transform: scale(1.3);
 }
-.conteinerActv h3 {
+.conteinerActv h2 {
   position: absolute;
   color: white;
   font-size: 20px;
@@ -301,6 +301,12 @@ footer {
 .miembrosRight {
   width: 70%;
   padding: 20px;
+}
+
+.subtitMiem {
+  padding: 10px;
+  font-size: 1.5rem;
+  color: white;
 }
 
 .miembrosConteiner article div {
@@ -388,7 +394,7 @@ footer {
   height: 75%;
 }
 
-.contacConteiner h4 {
+.contacConteiner h2 {
   grid-column: 1/3;
   text-align: center;
   text-decoration: underline;
